# atomic-mint-swap

./: .gitignore  ATOMIC_SWAP_ANALYSIS.md  PHASE2_COMPLETE.md  PROTOCOL_SPECIFICATION.md  QUICK-START.md  README.md  debug-coordinator.ts  debug-demo.ts  debug-failing-case.ts  debug-random-nonce.ts  docker-compose.yml  jest.config.js  package.json  test-atomic-swap-e2e.ts  test-local-mints.ts  test-mint-capabilities.ts  test-p2pk-adaptor-only.ts  test-p2pk-debug.ts  test-p2pk-simple.ts  tsconfig.json
.claude/: settings.local.json
cashu-broker/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TESTING.md  docker-compose.yml
cashu-broker/examples/: run_broker.rs
cashu-broker/migrations/: 20250117000001_initial_schema.sql
cashu-broker/src/: adaptor.rs  api.rs  broker.rs  config.rs  db.rs  db_tests.rs  error.rs  lib.rs  liquidity.rs  main.rs  swap.rs  types.rs
cashu-broker/tests/: api_integration_test.rs
docs/: ATOMIC-SWAP-STATUS.md  NEXT-STEPS.md  RUST-COMPLETION-SUMMARY.md  RUST-PORT-STATUS.md  STATUS.md
scripts/: setup-local-mints.sh
src/: index.ts
src/broker/: charlie.ts  liquidity.ts  swap-coordinator.ts  types.ts
src/cashu/: index.ts  mint-client.ts  p2pk.ts  tokens.ts  types.ts  wallet.ts
src/crypto/: adaptor.ts  bdhke.ts  index.ts  types.ts  utils.ts
src/crypto/__tests__/: adaptor.test.ts  utils.test.ts
src/protocol/: index.ts  swap-coordinator.ts  types.ts
tests/: check-noble-api.js  debug-detailed.ts  debug-verify.py  demo-coordinator.ts  demo-p2pk-working.ts  demo-p2pk.ts  demo.ts  python-schnorr-test.py  test-adaptor-only.ts  test-atomic-swap-e2e.ts  test-bdhke.ts  test-bip340-schnorr.ts  test-broker.ts  test-cashu-ts-style.ts  test-compressed-pubkey.ts  test-debug-p2pk-sig.ts  test-exact-p2pk.py  test-final-debug.ts  test-hash-to-curve.py  test-hash-to-curve.ts  test-json-serialization.ts  test-mint-only.ts  test-noble-schnorr.ts  test-p2pk-bdhke.py  test-p2pk-debug-message.ts  test-p2pk-only.py  test-p2pk-y.ts  test-point-prefix.ts  test-raw-schnorr-debug.ts  test-real-tokens-swap.ts  test-simple-p2pk-minimal.ts  test-simple-p2pk.ts  test-simple-swap.ts  test-single-token-swap.ts  test-true-atomic-swap.ts  test-verify-directly.py  test-verify-proof.py  test-with-cashu-ts-lib.ts
