[package]
name = "cashu-broker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Atomic swap broker service for Cashu ecash across different mints"
license = "MIT"
repository = "https://github.com/yourusername/cashu-broker"
keywords = ["cashu", "ecash", "atomic-swap", "broker", "lightning"]
categories = ["cryptography", "finance"]

[dependencies]
# Cashu Development Kit
cdk = "0.4"

# Schnorr adaptor signatures
schnorr_fun = { version = "0.10", features = ["serde", "bincode"] }
secp256kfun = { version = "0.10", features = ["serde", "bincode"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "cashu_broker"
path = "src/lib.rs"

[[example]]
name = "run_broker"
path = "examples/run_broker.rs"
