[package]
name = "cashu-broker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Atomic swap broker service for Cashu ecash across different mints"
license = "MIT"
repository = "https://github.com/yourusername/cashu-broker"
keywords = ["cashu", "ecash", "atomic-swap", "broker", "lightning"]
categories = ["cryptography", "finance"]

[dependencies]
# Cashu Development Kit
cdk = "0.4"

# Schnorr adaptor signatures
schnorr_fun = { version = "0.10", features = ["serde", "bincode"] }
secp256kfun = { version = "0.10", features = ["serde", "bincode"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Utilities
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "cashu_broker"
path = "src/lib.rs"

[[bin]]
name = "cashu-broker"
path = "src/main.rs"

[[example]]
name = "run_broker"
path = "examples/run_broker.rs"
